fixed the issue of the container box not showing up on contact info upper container

--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ article .icon {
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53, 53, 53);
+    border: rgb(53, 53, 53) 0.1rem solid;
     background: rgb(250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;
